--- a/client/src/styles/sign-up.css
+++ b/client/src/styles/sign-up.css
@@ -1,9 +1,4 @@
-.signup {
-    font-family: ‘Abril Fatface’, cursive;
-    font-size: 100%;
-}
-
 .SignupForm {
-    font-family: ‘Abril Fatface’, cursive;
-    font-size: 100%;
+    font-family: 'Abril Fatface', cursive;
+    text-align: -webkit-center;
 }
