--- a/client/src/styles/Collection.css
+++ b/client/src/styles/Collection.css
@@ -27,7 +27,7 @@
     display: flex;
     padding: 0 5% 0 5%;
     flex-flow: row wrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-content: flex-start;
     overflow: auto;
 }
@@ -40,10 +40,10 @@
 .card {
     border-radius: 2px;
     height: 450px;
-    margin: 5px;
+    margin: auto;
     margin-bottom: 2%;
     position: relative;
-    width: 270px;
+    width: 250px;
     text-align: left;
     font-family: 'Questrial', sans-serif;
 }
