--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -17,6 +17,8 @@
     font-family: 'Abril Fatface', cursive;
     font-size: 40px;
     color: white;
+    border-color: #50A3A4;
+    background-color: #50A3A4;
 }
 
 .home-button:hover {
@@ -24,7 +26,7 @@
     transform: scale(1.05)
 }
 
-#button1 {
+/* #button1 {
     border-color: #FBAF37;
     background-color: #FBAF37;
 }
@@ -42,4 +44,4 @@
 #button4 {
     border-color: #50A3A4;
     background-color: #50A3A4;
-}
+} */
