--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -4,7 +4,7 @@
 
 .form-div {
     margin: 35px auto 30px auto;
-    width: 60%;
+    width: 55%;
     box-shadow:0 0 8px #605856;
     padding-bottom: 1px;
 }
@@ -17,10 +17,10 @@ form {
 
 #post-submit-btn {
     margin-top: 2%;
-    padding-top: 10px;
     height: 45px;
     width: 100%;
     border-radius: 125px;
+    color: white;
 }
 
 #map {
