added style to requests page

--- a/client/src/styles/Collection.css
+++ b/client/src/styles/Collection.css
@@ -27,14 +27,18 @@
     display: flex;
     padding: 0 5% 0 5%;
     flex-flow: row wrap;
-    /* justify-content: space-between; */
     align-content: flex-start;
     overflow: auto;
 }
 
+.img-container {
+    height: 50%;
+}
+
 .img-container > img {
-    margin-top: 5%;
-    width: 100%
+    margin: 5%;
+    max-width: 95%;
+    height: 95%
   }
 
 .card {
@@ -54,15 +58,26 @@
 
 .card-title {
     color: #F75133;
+    padding-right: 20px;
+    font-size: 18px;
+    line-height: 1
 }
 
 .card-text {
     color: #66483F;
+    max-height: 50px;
+    margin-bottom: 25px;
 }
 
 .btn {
     background-color: #50A3A4;
     border-color: #50A3A4;
     height: 40px;
-    padding-top: 8px;
+    padding-top: 7px;
+    border-radius: 50px;
+    width: 100%
+}
+
+.btn:hover {
+    color: #9BC1BC;
 }
