--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -26,6 +26,16 @@
     transform: scale(1.05)
 }
 
+.logout{
+    font-family: 'Abril Fatface', cursive;
+    border-color: #50A3A4;
+    background-color: #50A3A4;
+    color: white;
+    margin: 10px;
+    
+
+}
+
 /* #button1 {
     border-color: #FBAF37;
     background-color: #FBAF37;
