--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -3,7 +3,7 @@
 }
 
 .dashboard {
-    width: 75%;
+    width: 70%;
     margin: auto;
     margin-top: 4%;
     box-shadow:0 0 8px #605856;
@@ -11,7 +11,7 @@
 
 .home-buttons {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: white;
     padding: 10px;
     flex-flow: row wrap;
