--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -13,14 +13,14 @@
     display: flex;
     justify-content: space-between;
     background-color: white;
-    padding: 10px;
+    padding: 30px;
     flex-flow: row wrap;
 }
 
 .home-button {
     height: 225px;
     width: 225px;
-    margin: 25px;
+    /* margin: 25px; */
     box-shadow:0 0 8px #605856;
     font-size: 30px;
     color: white;
